[package]
name = "ANSII_game"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Rev1le/ASCII_terminal_game.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emoji = "0.2.1"
rand = "0.8.5"
try-catch = "0.2.2"
terminal = "0.2.1"